# codec

./: .gitignore  Cargo.toml  README.md  bundler.toml  run.bat  run.sh
.cargo/: config.toml
.github/workflows/: build.yml
packaging/: README.md
packaging/macos/: build-pkg.sh
packaging/windows/: installer.iss
plugin/: Cargo.toml
plugin/src/: editor.rs  filter.rs  granular.rs  ipc.rs  ipc_standalone.rs  lib.rs  standalone.rs
ui/: build.gradle.kts  settings.gradle.kts
ui/src/main/kotlin/com/composevst/: IpcClient.kt  Main.kt
ui/src/main/kotlin/com/composevst/components/: Controls.kt  FrequencyResponse.kt  Knob.kt  ParamSlider.kt
