[package]
name = "compose-vst-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
ctrlc = "3.4"

[[bin]]
name = "compose-vst-standalone"
path = "src/standalone.rs"
required-features = ["standalone"]

[features]
default = []
standalone = ["cpal", "hound"]

[dependencies.cpal]
version = "0.15"
optional = true

[dependencies.hound]
version = "3.5"
optional = true

[profile.release]
lto = true
strip = true
